# hs-chartfold

./: cabal.project  flake.nix
chartfold/: LICENSE  README.md  chartfold.cabal  default.nix
chartfold-backend-Chart/: LICENSE  README.md  chartfold-backend-Chart.cabal  default.nix
chartfold-backend-Chart/lib/Chartfold/Backend/: Chart.hs
chartfold-backend-Chart/lib/Chartfold/Backend/Chart/: Orphans.hs
chartfold-examples/: README.md  chartfold-examples.cabal  default.nix
chartfold-examples/exe/: Main.hs  clock.hs
chartfold-examples/lib/Chartfold/Examples/: One.hs
chartfold/lib/: Chartfold.hs
chartfold/lib/Chartfold/: Candle.hs  Chart.hs  Constraint.hs  Core.hs  Extra.hs  Fill.hs  HLine.hs  Id.hs  Line.hs  Orphans.hs  VLine.hs  XChart.hs  XCharts.hs
