cabal-version: 2.4
name: chartfold-examples
version: 0.1
license: CC0-1.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Copyright (c) Renzo Carbonara 2023
category: Numbers
build-type: Simple
synopsis: Examples of using the chartfold library.
description: Examples of using the chartfold library.
homepage: https://github.com/k0001/hs-chartfold
bug-reports: https://github.com/k0001/hs-chartfold/issues
tested-with: GHC ==9.4.3

common basic
  default-language: GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
  ghc-options: -O2 -Wall
  build-depends:
    base ==4.*,
    base-prelude,
    chartfold,
    mtl-prelude,
  mixins:
    base hiding (Prelude),
    base-prelude (BasePrelude as Prelude)

executable chartfold-examples-clock
  import: basic
  hs-source-dirs: exe
  main-is: clock.hs
  ghc-options: -threaded -rtsopts
  build-depends:
    chartfold-backend-Chart,
    Chart,
    Chart-cairo,
    containers,
    gtk,
    time,
    stm,
